--- a/intex.html
+++ b/intex.html
@@ -11,9 +11,9 @@
     <div class="stopwatch">
         <h1 id="displaytime">00:00:00</h1>
         <div class="buttons">
-            <img src="C:\Users\Nanthakumar.K\AppData\Local\Temp\Temp1_stopwatch_img.zip\images\stop.png"    onclick="watchstop()">
-            <img src="C:\Users\Nanthakumar.K\AppData\Local\Temp\Temp1_stopwatch_img.zip\images\start.png" alt="" onclick="watchstart()">
-            <img src="C:\Users\Nanthakumar.K\AppData\Local\Temp\Temp1_stopwatch_img.zip\images\reset.png" alt="" onclick="watchreset()"></div>
+            <img src="D:\js\stopwatch project\stop.png"    onclick="watchstop()">
+            <img src="D:\js\stopwatch project\start.png" alt="" onclick="watchstart()">
+            <img src="D:\js\stopwatch project\reset.png" alt="" onclick="watchreset()"></div>
         </div>
 </body>
 <script>
